src/objects/PBS_Batch_Operation_Record__c.object
<CustomObject>
    <fields>
        <fullName>Record_Key__c</fullName>
        <externalId>true</externalId>
        <label>Record Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Plan_Batch_Operation__c</fullName>
        <label>Training Plan Batch Operation</label>
        <referenceTo>PBS_Training_Plan_Batch_Operation__c</referenceTo>
        <relationshipName>Batch_Operation_Records</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>PBS_Batch Operation Record</label>
    <nameField>
        <displayFormat>BOPR-{0000000}</displayFormat>
        <label>Batch Operation Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PBS_Batch Operation Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>